--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <h2 class="catalog__title">ОБУВЬ</h2>
                 <a class="catalog__link" href="#">ЕЩЁ</a>
             </div>
-                <div class="catalog__card">
+                <!-- <div class="catalog__card">
                     <img class="catalog__image" src="images/туфли.jpg" alt="Фото туфли" width="500">
                     <h3 class="catalog__name">Туфли</h3>
                     <a class="catalog__link" href="#">СМОТРЕТЬ</a>
@@ -110,7 +110,7 @@
                     <img  class="catalog__image" src="images/босоножки.jpg" alt="Фото босоножки" width="500">
                     <h3 class="catalog__name">Босоножки</h3>
                     <a class="catalog__link" href="#">СМОТРЕТЬ</a>
-                </div>
+                </div> -->
         </section>
         <section class="catalog">
             <div class="catalog__wrap">
