--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
                         <a class="menu__link" href="index.html">Главная</a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link" href="#">Новинки</a>
+                        <a class="menu__link" href="news">Новинки</a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link" href="#">Одежда</a>
+                        <a class="menu__link" href="cloths">Одежда</a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link" href="#">Обувь</a>
+                        <a class="menu__link" href="shoes">Обувь</a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link" href="#">Аксессуары</a>
+                        <a class="menu__link" href="accessories">Аксессуары</a>
                     </li>
                 </ul>
             </nav>
@@ -146,35 +146,30 @@
                         <img class="catalog__image" src="images/кулон.jpg" alt="Фото кулон" width="500">
                         <h3 class="catalog__name">Тонкая цепь с овальной подвеской</h3>
                         <span>1 599 ₽</span>
-                        <button class="catalog__item" type="button">♡</button>
                         <a class="catalog__links" href="#">Перейти к товару</a>
                     </div>
                     <div class="catalog__card swiper-slide">
                         <img class="catalog__image" src="images/заколка.jpg" alt="Фото заколка" width="500">
                         <h3 class="catalog__name">Бархатный бант для волос с заколкой из бусин</h3>
                         <span>1 299 ₽</span>
-                        <button class="catalog__item" type="button">♡</button>
                         <a class="catalog__links" href="#">Перейти к товару</a>
                     </div>
                     <div class="catalog__card swiper-slide">
                         <img class="catalog__image" src="images/браслет.jpg" alt="Фото браслет" width="500">
                         <h3 class="catalog__name">Круглый браслет из фактурного металла</h3>
                         <span>1 699 ₽</span>
-                        <button class="catalog__item" type="button">♡</button>
                         <a class="catalog__links" href="#">Перейти к товару</a>
                     </div>
                     <div class="catalog__card swiper-slide">
                         <img class="catalog__image" src="images/косынка.jpg" alt="Фото косынка" width="500">
                         <h3 class="catalog__name">Косынка из гипюра</h3>
                         <span>1 799 ₽</span>
-                        <button class="catalog__item" type="button">♡</button>
                         <a class="catalog__links" href="#">Перейти к товару</a>
                     </div>
                     <div class="catalog__card swiper-slide">
                         <img class="catalog__image" src="images/сумка.jpg" alt="Фото сумка" width="500">
                         <h3 class="catalog__name">Прямоугольная сумка из матовой экокожи</h3>
                         <span>5 999 ₽</span>
-                        <button class="catalog__item" type="button">♡</button>
                         <a class="catalog__links" href="#">Перейти к товару</a>
                     </div>
                 </div>
